 * Clean up Prettier & Eslint usage for search promotions formset JS file (LB (Ben Johnston))
 * Ensure that translation file generation ignores JavaScript unit tests and clean up unit tests for Django gettext utils (LB (Ben Johnston))
 * Migrated `initButtonSelects` from core.js to own TypesScript file and add unit tests (Loveth Omokaro)
 * Clean up some unused utility classes and migrate `unlist` to Tailwind utility class `w-list-none` (Loveth Omokaro)
 * Ensure that the `rebuild_references_index` command can run without console output if called with `--verbosity 0` (Omerzahid Ali, Aman Pandey)
 * Fix: Make sure workflow timeline icons are visible in high-contrast mode (Loveth Omokaro)
 * Fix: Ensure authentication forms (login, password reset) have a visible border in Windows high-contrast mode (Loveth Omokaro)
 * Fix: Ensure visual consistency between buttons and links as buttons in Windows high-contrast mode (Albina Starykova)
 * Fix: references extraction for ChooserBlock (Alex Tomkins)
 * Fix: Incorrectly formatted link in the documentation for Wagtail community support (Bolarinwa Comfort Ajayi)
 * Fix: Text within status tags text will now resize correctly when customizing browser font size (Mary Ojo)
 * Fix: Ensure logo shows correctly on log in page in Windows high-contrast mode (Loveth Omokaro)
 * Fix: Comments notice background overflows its container (Yekasumah)
 * Fix: Ensure links within help blocks meet colour contrast guidelines for accessibility (Theresa Okoro)
 * Fix: Ensure the skip link (used for keyboard control) meets colour contrast guidelines for accessibility (Dauda Yusuf)


4.1.1 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~

 * Fix: Fix issue where lock/unlock buttons would not work on the Dashboard (home) page or the page index listing via the status sidebar (Stefan Hammer)
 * Fix: Fix disabled style on StreamField add button (Matt Westcott)